<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.amungo.gpsspoofingdetector.GpsActivity">

    <LinearLayout
        android:id="@+id/control_button_set"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/b_start_gps"
            android:src="@android:drawable/ic_media_play"
            android:scaleType="fitEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="visible"
            android:onClick="startClicked"
            android:contentDescription="@string/s_start_gps" />

        <ImageButton
            android:id="@+id/b_stop_gps"
            android:src="@android:drawable/ic_media_pause"
            android:scaleType="fitEnd"
            android:contentDescription="@string/s_stop_gps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:onClick="stopClicked"/>

        <ImageButton
            android:onClick="showMap"
            android:src="@android:drawable/ic_dialog_map"
            android:scaleType="fitEnd"
            android:contentDescription="@string/s_show_anomaly_map"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <!--<TextView-->
            <!--android:id="@+id/tw_location"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content" />-->
        <!--<TextView-->
            <!--android:id="@+id/tw_speed"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content" />-->



        <Switch
            android:id="@+id/switch_gps_visible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:enabled="false"
            android:text="@string/s_gps_state"
            android:textOff="@string/s_gps_off"
            android:textOn="@string/s_gps_on" />

        <TextView
            android:id="@+id/tw_spoof"
            android:textColor="@color/color_warning"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <!--<Button-->
            <!--android:text="@string/s_test_add_anomaly"-->
            <!--android:onClick="sendAnomaly"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:gravity="bottom"/>-->


    </LinearLayout>

    <android.support.v7.widget.CardView
        android:id="@+id/speed_card"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/control_button_set"
        style="@style/MyCardViewStyle">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tw_speed_hw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tw_speed_soft"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>


    </android.support.v7.widget.CardView>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_geolocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:clipToPadding="false"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/speed_card"
        tools:listitem="@layout/geolocation_item" />

</android.support.constraint.ConstraintLayout>
